# ACW

./: .gitattributes  .gitignore
acwandroid/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
acwandroid/app/src/androidTest/java/com/zapp/acw/: ExampleInstrumentedTest.java
acwandroid/app/src/main/: AndroidManifest.xml
acwandroid/app/src/main/cpp/: FileUtils.cpp  GeneratorInfo.cpp  GeneratorInfo.hpp  NetPackConfig.cpp  Package.cpp  Package.hpp  PackageManager.cpp  SavedCrossword.cpp  main.cpp
acwandroid/app/src/main/cpp/jni/: JavaArrays.cpp  JavaArrays.h  JavaCallback.cpp  JavaCallback.hpp  JavaContainers.cpp  JavaContainers.h  JavaContext.cpp  JavaContext.hpp  JavaFile.cpp  JavaFile.hpp  JavaFunction.cpp  JavaFunction.hpp  JavaJSONArrayImpl.cpp  JavaJSONArrayImpl.hpp  JavaJSONBase.cpp  JavaJSONBase.hpp  JavaJSONObjectImpl.cpp  JavaJSONObjectImpl.hpp  JavaObject.h  JavaString.cpp  JavaString.h  JavaTypes.cpp  JavaTypes.h  ObjectStore.hpp  jniapi.cpp  jniapi.h
acwandroid/app/src/main/java/com/zapp/acw/: Common.java  FileUtils.java  MainActivity.java
acwandroid/app/src/main/java/com/zapp/acw/bll/: Card.java  Deck.java  Downloader.java  Field.java  GameState.java  GeneratorInfo.java  NetLogger.java  NetPackConfig.java  Package.java  PackageManager.java  Pos.java  SavedCrossword.java  Statistics.java  SubscriptionManager.java
acwandroid/app/src/main/java/com/zapp/acw/ui/keyboard/: Keyboard.java  KeyboardConfig.java
acwandroid/app/src/main/java/com/zapp/acw/ui/keyboardconfigs/: Arabic102Keyboard.java  ChineseBopomofoKeyboard.java  ChineseChaJeiKeyboard.java  GreekKeyboard.java  HindiTraditionalKeyboard.java  HunKeyboard.java  JapanHiraganaKeyboard.java  JapanKatakanaKeyboard.java  PersianKeyboard.java  RussianKeyboard.java  ThaiKedmaneeKeyboard.java  ThaiPattachoteKeyboard.java  USKeyboard.java
acwandroid/app/src/main/java/com/zapp/acw/ui/main/: ActionCodes.java  BackgroundInitFragment.java  BackgroundInitViewModel.java  ChooseCW.java  ChooseCWAdapter.java  ChooseCWFragment.java  ChooseCWViewModel.java  CrosswordCell.java  CrosswordFragment.java  CrosswordViewModel.java  DownloadAdapter.java  DownloadFragment.java  DownloadViewModel.java  GenAdapter.java  GenFragment.java  GenViewModel.java  MainFragment.java  MainViewModel.java  (+6 more)
acwandroid/app/src/main/res/drawable/: helpbg.xml  ic_arrow_back_black_24dp.xml  ic_bottomdown.xml  ic_bottomright.xml  ic_leftright_bottom.xml  ic_leftright_top.xml  ic_right.xml  ic_topleft_down.xml  ic_topright.xml  ic_topright_down.xml  progress.xml  progressbar.xml  subscribe_alert_border.xml
acwandroid/app/src/main/res/layout/: choose_cw_fragment.xml  choose_cw_row.xml  crossword_cell.xml  crossword_fragment.xml  download_fragment.xml  download_row.xml  gen_fragment.xml  gen_row.xml  main_activity.xml  main_fragment.xml  store_fragment.xml
acwandroid/app/src/main/res/menu/: choosecw_menu.xml  cwview_menu.xml  gen_menu.xml
acwandroid/app/src/main/res/navigation/: nav_graph.xml
acwandroid/app/src/main/res/raw/: considerations.html  privacy_policy.html
acwandroid/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
acwandroid/app/src/main/res/values-de/: strings.xml
acwandroid/app/src/main/res/values-hu/: strings.xml
acwandroid/app/src/test/java/com/zapp/acw/: ExampleUnitTest.java
cw/cw/: cw.hpp  (+17 more)
(+194 files in other folders)
